# trend-lab-georisk-atlas-260602

./: README.md  pyproject.toml
src/georisk_atlas/: main.py
tests/: test_smoke.py
