[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "georisk-atlas"
version = "0.1.0"
description = "Minimal starter for a GeoRisk Atlas CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
georisk-atlas = "georisk_atlas.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
